--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,26 @@
+@import "./utils/mixins"
+@import "./utils/variables"
+
+*
+  padding: 0
+  margin: 0
+
 .container
-  max-width: 1140px
+  max-width: 1840px
   margin: 0 auto
+
+body
+  font-family: 'Uber Move Text', sans-serif
+  font-size: 18px
+
+.logo
+  @include linkNoUnderline
+  display: inline-block
+  img
+    width: auto
+    height: 56px
+    object-fit: contain
+
+.activeBtn
+  background-color: $secondaryColor !important
+  color: $mainColor !important
