Restaurant List finished

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -62,7 +62,7 @@ header
 
 .addressBtn
     @include btn
-    background-color: $lightGrey
+    background-color: $lightGray
     color: $secondaryColor
     font-size: 14px
     box-shadow: none
