--- a/src/components/RestaurantList/RestaurantItem/RestaurantItem.module.sass
+++ b/src/components/RestaurantList/RestaurantItem/RestaurantItem.module.sass
@@ -11,7 +11,7 @@
     text-align: center
     line-height: 28px
     font-weight: 600
-    background-color: $lightGrey
+    background-color: $lightGray
 
 .favourite
     position: absolute
@@ -22,7 +22,7 @@
     cursor: pointer
     color: $mainColor
     &:hover
-        color: $lightGrey
+        color: $lightGray
 
 .image
     position: relative
