--- a/src/utils/variables.sass
+++ b/src/utils/variables.sass
@@ -3,4 +3,4 @@ $secondaryColor: black
 $error: red
 $disabled: #CCCCCC
 $transparent: rgb(0, 0, 0, 0)
-$lightGrey: rgb(238, 238, 238)
+$lightGray: rgb(238, 238, 238)
