--- a/src/components/RestaurantList/RestaurantList.module.sass
+++ b/src/components/RestaurantList/RestaurantList.module.sass
@@ -1,4 +1,5 @@
 @import "../../utils/mixins"
+@import "../../utils/variables"
 
 .main
     margin-top: 48px
@@ -19,10 +20,11 @@
     min-width: 800px
     width: 100%
 
-.showMore
+.showMoreBtn
     @include btn
-    margin: 40px auto
     font-size: 18px
+    &:hover
+        @include hoverInvert
 
 .loadingItem
     max-width: 456px
@@ -46,3 +48,10 @@
         border-radius: 50%
         height: 28px
         width: 28px
+
+.showMore
+    margin: 40px auto
+    color: lightgray
+
+.noResults
+    margin: 0px auto
