--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -42,3 +42,11 @@ footer
 
 .footerLogo
     flex-grow: 0.5
+
+@media screen and (max-width: 480px)
+    footer
+        padding: 40px 20px
+    .footerHigh
+        flex-direction: column
+    .footerLogo
+        margin-bottom: 40px
