--- a/src/utils/mixins.sass
+++ b/src/utils/mixins.sass
@@ -16,6 +16,8 @@
     align-items: center
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px, rgba(0, 0, 0, 0.04) 0px 4px 4px
     font-family: 'Uber Move Text', sans-serif
+    align-items: center
+    justify-content: center
 
 @mixin linkNoUnderline
     text-decoration: none
