--- a/src/components/Home/Home.module.sass
+++ b/src/components/Home/Home.module.sass
@@ -2,14 +2,8 @@
 
 .bannerBox
     position: absolute
-    top: 50%
-    transform: translateY(-60%)
+    top: 40%
     margin-left: 40px
-
-h1
-    margin-top: 0
-    margin-bottom: 40px
-    font-size: 52px
 
 .img
     background-image: url(../../assets/images/foodBanner.jpg)
@@ -18,6 +12,23 @@ h1
     position: absolute
     width: 100%
     height: 100%
+    background-position-x: center
 
 .main
     height: 100vh
+    h1
+        margin-top: 0
+        margin-bottom: 40px
+        font-size: 52px
+
+@media screen and (max-width: 480px)
+    .main
+        h1
+            font-size: 36px
+    .bannerBox
+        position: static
+        transform: translateY(100%)
+        margin: unset
+        padding: 0px 20px
+    .img
+        background-position: 75%
