--- a/src/components/RestaurantList/RestaurantList.module.sass
+++ b/src/components/RestaurantList/RestaurantList.module.sass
@@ -70,6 +70,8 @@
     justify-content: space-between
     align-items: center
     margin-bottom: 8px
+    &::-webkit-details-marker
+        list-style: none
 
 .faChevron
     font-size: 20px
