--- a/src/components/Cart/Cart.module.sass
+++ b/src/components/Cart/Cart.module.sass
@@ -42,6 +42,7 @@
         bottom: 0px
         left: 0px
         top: 0px
+        right: 0px
         max-height: unset
         z-index: 3
         width: unset
