--- a/src/components/RestaurantList/RestaurantList.module.sass
+++ b/src/components/RestaurantList/RestaurantList.module.sass
@@ -66,6 +66,7 @@
     margin-bottom: 8px
     &::-webkit-details-marker
         list-style: none
+        display: none
 
 .faChevron
     font-size: 20px
