--- a/src/components/RestaurantList/RestaurantList.module.sass
+++ b/src/components/RestaurantList/RestaurantList.module.sass
@@ -61,16 +61,15 @@
     cursor: pointer
     list-style: none
     display: flex
-    justify-content: space-between
     align-items: center
     margin-bottom: 8px
     &::-webkit-details-marker
-        list-style: none
         display: none
 
-.faChevron
+.summaryArrow
     font-size: 20px
     color: $secondaryColor
+    margin-left: auto
 
 @media screen and (max-width: 480px)
     .list
