--- a/src/components/SortList/SortList.module.sass
+++ b/src/components/SortList/SortList.module.sass
@@ -20,6 +20,7 @@
         margin-bottom: 28px
     summary
         list-style: none
+        outline: none
         cursor: pointer
         font-weight: 500
         display: flex
@@ -130,6 +131,7 @@
 
 .summaryArrow
     margin-left: auto
+    margin-right: 16px
 
 @media screen and (max-width: 480px)
     .aside
