--- a/src/components/RestaurantList/RestaurantList.module.sass
+++ b/src/components/RestaurantList/RestaurantList.module.sass
@@ -70,6 +70,7 @@
     font-size: 20px
     color: $secondaryColor
     margin-left: auto
+    margin-right: 16px
 
 @media screen and (max-width: 480px)
     .list
