--- a/src/components/RestaurantList/RestaurantList.module.sass
+++ b/src/components/RestaurantList/RestaurantList.module.sass
@@ -71,6 +71,21 @@
     color: $secondaryColor
     margin-left: auto
 
+.searchBar
+    border: none
+    outline: none
+    padding: 8px 16px
+    font-family: 'Uber Move Text', sans-serif
+    font-size: 16px
+    font-weight: bold
+    width: 35%
+    border-radius: 50px
+    margin-bottom: 16px
+    margin-left: 12px
+    background-color: rgb(246, 246, 246)
+    &::placeholder
+        color: grey
+
 @media screen and (max-width: 480px)
     .list
         grid-template-columns: repeat(1, 1fr)
