--- a/src/components/RestaurantList/RestaurantList.module.sass
+++ b/src/components/RestaurantList/RestaurantList.module.sass
@@ -86,6 +86,18 @@
     &::placeholder
         color: grey
 
+.sortLoader
+    z-index: 1
+    background-color: $mainColor
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+
+.aside
+    position: relative
+
 @media screen and (max-width: 480px)
     .list
         grid-template-columns: repeat(1, 1fr)
